--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   "version": "1.0.0",
   "icons" : {
     "16" : "icon-16.png",
-    "64" : "icon-64.png"
+    "64" : "icon-64.png",
+    "256": "icon-256.png"
   },
   "permissions": [
     "tabs",
