--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
   "icons" : {
     "16" : "icons/icon-16.png",
     "64" : "icons/icon-64.png",
-    "256": "icons/icon-256.png"
+    "128" : "icons/icon-128.png",
+    "256" : "icons/icon-256.png"
   },
   "permissions": [
     "tabs",
