--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Real-Debrid",
   "description": "Real-Debrid Google Chrome Extension",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "icons" : {
     "16" : "icons/icon-16.png",
     "64" : "icons/icon-64.png",
@@ -10,6 +10,7 @@
     "256" : "icons/icon-256.png"
   },
   "permissions": [
+    "tabs",
     "contextMenus",
     "storage",
     "notifications",
