--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Real-Debrid",
-  "description": "Real-Debrid Google Chrome Extension",
-  "version": "1.5.4",
+  "name": "Real-Debrid Extension",
+  "description": "Real-Debrid Google Chrome Extension (Plugin)",
+  "version": "1.5.5",
   "icons" : {
     "16" : "icons/icon-16.png",
     "64" : "icons/icon-64.png",
