--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Real-Debrid Extension",
   "description": "Real-Debrid Google Chrome Extension (Plugin)",
-  "version": "1.6.0",
+  "version": "1.5.5",
   "icons" : {
     "16" : "icons/icon-16.png",
     "64" : "icons/icon-64.png",
@@ -15,13 +15,12 @@
     "downloads",
     "storage",
     "notifications",
-    "https://real-debrid.com/",
-    "https://jonasdevlieghere.com/"
+    "https://real-debrid.com/"
   ],
   "background": {
     "scripts": [
       "libs/jquery.min.js",
-      "src/background.js"
+      "js/background.js"
     ]
   }
 }
