--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,12 @@
 ._*
 .Spotlight-V100
 .Trashes
-ehthumbs.db
-Thumbs.db
 .grunt
 .idea
-*.zip
-*.crx
+.sass-cache
 node_modules
 dist
+*.zip
+*.crx
+ehthumbs.db
+Thumbs.db
