--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "Real-Debrid-Extension",
 	"version": "1.6.0",
-	"repository": { 
-		"type" : "git", 
+	"repository": {
+		"type" : "git",
 		"url" : "https://github.com/JDevlieghere/Real-Debrid"
   },
 	"devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-compress": "~0.10.0",
     "grunt-contrib-jshint": "~0.10.0",
-    "grunt-jsbeautifier": "~0.2.7"
+    "grunt-jsbeautifier": "~0.2.7",
+    "grunt-contrib-sass": "~0.7.4",
+    "grunt-contrib-watch": "~0.4.4"
   }
 }
