--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,13 @@
 ._*
 .Spotlight-V100
 .Trashes
-ehthumbs.db
-Thumbs.db
-
+.grunt
+.idea
+.sass-cache
+node_modules
+dist
 *.zip
 *.crx
+ehthumbs.db
+Thumbs.db
+src/css
