--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Real-Debrid",
-  "description": "Real-Debrid Google Chrome Extension",
-  "version": "1.5.4",
+  "name": "Real-Debrid Extension",
+  "description": "Real-Debrid Google Chrome Extension (Plugin)",
+  "version": "1.6.0",
   "icons" : {
     "16" : "icons/icon-16.png",
     "64" : "icons/icon-64.png",
@@ -19,8 +19,9 @@
   ],
   "background": {
     "scripts": [
-      "libs/jquery.min.js",
-      "src/background.js"
+      "/libs/js/jquery.min.js",
+      "js/background.js"
     ]
-  }
+  },
+  "options_page": "html/options.html"
 }
