--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,9 @@
 {
   "manifest_version": 2,
   "name": "Real-Debrid Extension",
+  "short_name": "Real-Debrid",
   "description": "Real-Debrid Google Chrome Extension (Plugin)",
-  "version": "1.6.1",
+  "version": "1.7.0",
   "icons" : {
     "16" : "icons/icon-16.png",
     "64" : "icons/icon-64.png",
@@ -15,6 +16,7 @@
     "downloads",
     "storage",
     "notifications",
+    "declarativeContent",
     "https://real-debrid.com/"
   ],
   "background": {
@@ -22,6 +24,13 @@
       "/libs/js/jquery.min.js",
       "js/background.js"
     ]
+  },
+  "page_action": {
+    "default_icon": {                  
+      "19": "icons/icon-19.png",          
+      "38": "icons/icon-38.png"            
+    },
+    "default_title": "Real-Debrid"
   },
   "options_page": "html/options.html"
 }
