--- a/src/manifest.json
+++ b/src/manifest.json
@@ -25,12 +25,13 @@
       "js/background.js"
     ]
   },
-  "page_action": {
+  "browser_action": {
     "default_icon": {
       "19": "icons/icon-19.png",
       "38": "icons/icon-38.png"
     },
-    "default_title": "Real-Debrid"
+    "default_title": "Real-Debrid",
+    "default_popup": "html/popup.html"
   },
   "options_page": "html/options.html"
 }
