--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,7 @@
   "name": "Real-Debrid Extension",
   "short_name": "Real-Debrid",
   "description": "Real-Debrid Google Chrome Extension (Plugin)",
-  "version": "1.7.1",
+  "version": "1.7.3",
   "icons" : {
     "16" : "icons/icon-16.png",
     "64" : "icons/icon-64.png",
@@ -25,12 +25,13 @@
       "js/background.js"
     ]
   },
-  "page_action": {
+  "browser_action": {
     "default_icon": {
       "19": "icons/icon-19.png",
       "38": "icons/icon-38.png"
     },
-    "default_title": "Real-Debrid"
+    "default_title": "Real-Debrid",
+    "default_popup": "html/popup.html"
   },
   "options_page": "html/options.html"
 }
