Added progress notifications

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -23,6 +23,7 @@
   "background": {
     "scripts": [
       "/libs/js/jquery.min.js",
+      "/libs/js/clipboard.min.js",
       "js/background.js"
     ]
   },
